finish be get staff approved transaction and integrate with fe